# juiceprune

./: .gitignore  CLAUDE.md  CODE-REVIEW.md  COMMAND-SESSIONS.md  MKDOCS-IMPLEMENTATION.md  Makefile  README.md  SHARED-PROJECT-DATABASE-REFACTOR.md  mkdocs.yml  pyproject.toml
__NEXT/: ARCHITECTURE-NOTES.md  HISTORY-in-WORKTREE.md  NATIVE-POTS-AND-PLUM.md  PRJ-TEXTUAL-APP.md  PYDANTIC-PLAN.txt  RESUME.md  START-COMMAND.md  USE-PYDANTIC-GRAPH.md  WORKTREE-DIFF-VIEW.md  WORKTREE-OPS.md
___done/: MERMAID-UML-DIAGRAMS.md  PROJECT-TMP-DIR.md
diagrams/: 01-system-architecture.md  02-domain-models.md  03-execution-flow.md  04-integration-components.md  05-command-hierarchy.md  README.md
docs/: index.md
docs/advanced/: custom-integrations.md  mcp-server.md  troubleshooting.md
docs/concepts/: architecture.md  sessions.md  worktrees.md
docs/guides/: command-definition.md  project-setup.md  step-creation.md  workflows.md
docs/quickstart/: existing-project.md  first-command.md  new-project.md
docs/reference/: commands.md  config.md  yaml-schema.md
site/: 404.html  index.html  sitemap.xml
site/advanced/custom-integrations/: index.html
site/advanced/mcp-server/: index.html
site/concepts/sessions/: index.html
site/search/: search_index.json
src/: CLAUDE.md
src/prunejuice/: __init__.py  cli.py  env_utils.py  schema.sql
tests/: conftest.py  test_artifacts.py  test_cli.py  test_database.py  test_env_utils.py  test_executor.py  test_integrations.py  test_loader.py  test_smoke.py  test_step_models.py  test_tui.py  test_workflow.py  test_worktree_operations.py
(+66 files in other folders)
